feat(profiler): 添加性能分析器功能增强
- 更新配置文件中的采样频率参数名为sample_freq并添加包含包配置
- 集成ASM库用于字节码操作和动态类转换
- 实现动态性能分析API包括堆栈跟踪和方法拦截功能
- 新增EntityKeyExtractor类用于从Mindustry实体对象提取可读标识符
- 重构性能分析窗口界面添加清除数据和刷新按钮
- 开放HotSwapAgent的fetchOriginalBytecode方法供外部使用
- 更新采样分析器配置参数和包过滤逻辑
- 添加实时线程采样功能的实验性代码实现